parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    NEWLINE

Grammar

Rule 0     S' -> sentencias
Rule 1     sentencias -> statement
Rule 2     sentencias -> if
Rule 3     sentencias -> for
Rule 4     sentencias -> while
Rule 5     sentencias -> statement sentencias
Rule 6     sentencias -> if sentencias
Rule 7     sentencias -> while sentencias
Rule 8     sentencias -> for sentencias
Rule 9     statement -> stm
Rule 10    statement -> stm SEMICOLON
Rule 11    stm -> asignacion
Rule 12    stm -> asignacion_date
Rule 13    stm -> array
Rule 14    stm -> set
Rule 15    stm -> expresion
Rule 16    stm -> metodos
Rule 17    metodos -> imprimir
Rule 18    metodos -> touppercase
Rule 19    metodos -> tolowercase
Rule 20    metodos -> startwith
Rule 21    metodos -> tostring
Rule 22    metodos -> pop
Rule 23    metodos -> push
Rule 24    metodos -> shift
Rule 25    metodos -> setdate
Rule 26    metodos -> getfullyear
Rule 27    metodos -> has
Rule 28    metodos -> intersection
Rule 29    metodos -> union
Rule 30    imprimir -> PRINT LPAREN factor RPAREN
Rule 31    touppercase -> ID TOUPPERCASE LPAREN RPAREN
Rule 32    touppercase -> type ID EQUAL ID TOUPPERCASE LPAREN RPAREN
Rule 33    tolowercase -> ID TOLOWERCASE LPAREN RPAREN
Rule 34    tolowercase -> type ID EQUAL ID TOLOWERCASE LPAREN RPAREN
Rule 35    startwith -> ID STARTSWITH LPAREN STRING RPAREN
Rule 36    startwith -> type ID EQUAL ID STARTSWITH LPAREN STRING RPAREN
Rule 37    tostring -> ID TOSTRING LPAREN RPAREN
Rule 38    tostring -> type ID EQUAL ID TOSTRING LPAREN RPAREN
Rule 39    pop -> ID POP LPAREN RPAREN
Rule 40    pop -> type ID EQUAL ID POP LPAREN RPAREN
Rule 41    push -> ID PUSH LPAREN factor RPAREN
Rule 42    push -> type ID EQUAL ID PUSH LPAREN factor RPAREN
Rule 43    shift -> ID SHIFT LPAREN RPAREN
Rule 44    shift -> type ID EQUAL ID SHIFT LPAREN RPAREN
Rule 45    setdate -> ID SETDATE LPAREN NUMBER RPAREN
Rule 46    setdate -> type ID EQUAL ID SETDATE LPAREN NUMBER RPAREN
Rule 47    getfullyear -> ID GETFULLYEAR LPAREN RPAREN
Rule 48    getfullyear -> type ID EQUAL ID GETFULLYEAR LPAREN RPAREN
Rule 49    has -> ID HAS LPAREN factor RPAREN
Rule 50    has -> type ID EQUAL ID HAS LPAREN factor RPAREN
Rule 51    intersection -> ID INTERSECTION LPAREN set_parametro RPAREN
Rule 52    intersection -> type ID EQUAL ID INTERSECTION LPAREN set_parametro RPAREN
Rule 53    union -> ID UNION LPAREN set_parametro RPAREN
Rule 54    union -> type ID EQUAL ID UNION LPAREN set_parametro RPAREN
Rule 55    while -> WHILE LPAREN condicion RPAREN LBRACE sentencias RBRACE
Rule 56    if -> IF LPAREN condicion RPAREN LBRACE sentencias RBRACE
Rule 57    if -> IF LPAREN condicion RPAREN LBRACE sentencias RBRACE else
Rule 58    if -> IF LPAREN condicion RPAREN LBRACE sentencias RBRACE elseif
Rule 59    condicion -> TRUE
Rule 60    condicion -> FALSE
Rule 61    condicion -> NOT expresion
Rule 62    condicion -> expresion operadorlogico expresion
Rule 63    condicion -> LPAREN condicion RPAREN operadorlogico expresion
Rule 64    condicion -> expresion operadorlogico LPAREN condicion RPAREN
Rule 65    condicion -> expresion operador_comparison expresion
Rule 66    else -> ELSE LBRACE sentencias RBRACE
Rule 67    elseif -> ELSE IF LPAREN condicion RPAREN LBRACE sentencias RBRACE else
Rule 68    for -> FOR LPAREN type ID OF ID RPAREN LBRACE sentencias RBRACE
Rule 69    asignacion -> ID EQUAL expresion
Rule 70    asignacion -> declaracion
Rule 71    asignacion_date -> type ID EQUAL NEW DATE LPAREN RPAREN
Rule 72    asignacion_date -> type ID EQUAL NEW DATE LPAREN date_param RPAREN
Rule 73    array -> type ID EQUAL LBRACKET RBRACKET
Rule 74    array -> type ID EQUAL LBRACKET arr_parametro RBRACKET
Rule 75    set -> type ID EQUAL NEW SET LPAREN RPAREN
Rule 76    set -> type ID EQUAL NEW SET LPAREN set_parametro RPAREN
Rule 77    arr_parametro -> expresion
Rule 78    arr_parametro -> expresion COMMA arr_parametro
Rule 79    set_parametro -> LBRACKET arr_parametro RBRACKET
Rule 80    set_parametro -> ID
Rule 81    declaracion -> type ID EQUAL expresion
Rule 82    date_param -> STRING
Rule 83    date_param -> NUMBER
Rule 84    date_param -> NUMBER COMMA NUMBER
Rule 85    date_param -> NUMBER COMMA NUMBER COMMA NUMBER
Rule 86    type -> VAR
Rule 87    type -> LET
Rule 88    expresion -> NUMBER operador NUMBER
Rule 89    operador -> MINUS
Rule 90    operador -> PLUS
Rule 91    operador -> DIVIDE
Rule 92    operador -> TIMES
Rule 93    operador -> MOD
Rule 94    operadorlogico -> EQUALS
Rule 95    operadorlogico -> NOTEQUALS
Rule 96    operadorlogico -> STRICTEQUALS
Rule 97    operadorlogico -> MORETHAN
Rule 98    operadorlogico -> LESSTHAN
Rule 99    operadorlogico -> MORETHANEQUALS
Rule 100   operadorlogico -> LESSTHANEQUALS
Rule 101   operadorlogico -> STRICTNOTEQUALS
Rule 102   operador_comparison -> AND
Rule 103   operador_comparison -> OR
Rule 104   expresion -> term
Rule 105   term -> factor
Rule 106   factor -> ID
Rule 107   factor -> NUMBER
Rule 108   factor -> STRING
Rule 109   factor -> TRUE
Rule 110   factor -> FALSE

Terminals, with rules where they appear

AND                  : 102
COMMA                : 78 84 85 85
DATE                 : 71 72
DIVIDE               : 91
ELSE                 : 66 67
EQUAL                : 32 34 36 38 40 42 44 46 48 50 52 54 69 71 72 73 74 75 76 81
EQUALS               : 94
FALSE                : 60 110
FOR                  : 68
GETFULLYEAR          : 47 48
HAS                  : 49 50
ID                   : 31 32 32 33 34 34 35 36 36 37 38 38 39 40 40 41 42 42 43 44 44 45 46 46 47 48 48 49 50 50 51 52 52 53 54 54 68 68 69 71 72 73 74 75 76 80 81 106
IF                   : 56 57 58 67
INTERSECTION         : 51 52
LBRACE               : 55 56 57 58 66 67 68
LBRACKET             : 73 74 79
LESSTHAN             : 98
LESSTHANEQUALS       : 100
LET                  : 87
LPAREN               : 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 63 64 67 68 71 72 75 76
MINUS                : 89
MOD                  : 93
MORETHAN             : 97
MORETHANEQUALS       : 99
NEW                  : 71 72 75 76
NEWLINE              : 
NOT                  : 61
NOTEQUALS            : 95
NUMBER               : 45 46 83 84 84 85 85 85 88 88 107
OF                   : 68
OR                   : 103
PLUS                 : 90
POP                  : 39 40
PRINT                : 30
PUSH                 : 41 42
RBRACE               : 55 56 57 58 66 67 68
RBRACKET             : 73 74 79
RPAREN               : 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 63 64 67 68 71 72 75 76
SEMICOLON            : 10
SET                  : 75 76
SETDATE              : 45 46
SHIFT                : 43 44
STARTSWITH           : 35 36
STRICTEQUALS         : 96
STRICTNOTEQUALS      : 101
STRING               : 35 36 82 108
TIMES                : 92
TOLOWERCASE          : 33 34
TOSTRING             : 37 38
TOUPPERCASE          : 31 32
TRUE                 : 59 109
UNION                : 53 54
VAR                  : 86
WHILE                : 55
error                : 

Nonterminals, with rules where they appear

arr_parametro        : 74 78 79
array                : 13
asignacion           : 11
asignacion_date      : 12
condicion            : 55 56 57 58 63 64 67
date_param           : 72
declaracion          : 70
else                 : 57 67
elseif               : 58
expresion            : 15 61 62 62 63 64 65 65 69 77 78 81
factor               : 30 41 42 49 50 105
for                  : 3 8
getfullyear          : 26
has                  : 27
if                   : 2 6
imprimir             : 17
intersection         : 28
metodos              : 16
operador             : 88
operador_comparison  : 65
operadorlogico       : 62 63 64
pop                  : 22
push                 : 23
sentencias           : 5 6 7 8 55 56 57 58 66 67 68 0
set                  : 14
set_parametro        : 51 52 53 54 76
setdate              : 25
shift                : 24
startwith            : 20
statement            : 1 5
stm                  : 9 10
term                 : 104
tolowercase          : 19
tostring             : 21
touppercase          : 18
type                 : 32 34 36 38 40 42 44 46 48 50 52 54 68 71 72 73 74 75 76 81
union                : 29
while                : 4 7

Parsing method: LALR

state 0

    (0) S' -> . sentencias
    (1) sentencias -> . statement
    (2) sentencias -> . if
    (3) sentencias -> . for
    (4) sentencias -> . while
    (5) sentencias -> . statement sentencias
    (6) sentencias -> . if sentencias
    (7) sentencias -> . while sentencias
    (8) sentencias -> . for sentencias
    (9) statement -> . stm
    (10) statement -> . stm SEMICOLON
    (56) if -> . IF LPAREN condicion RPAREN LBRACE sentencias RBRACE
    (57) if -> . IF LPAREN condicion RPAREN LBRACE sentencias RBRACE else
    (58) if -> . IF LPAREN condicion RPAREN LBRACE sentencias RBRACE elseif
    (68) for -> . FOR LPAREN type ID OF ID RPAREN LBRACE sentencias RBRACE
    (55) while -> . WHILE LPAREN condicion RPAREN LBRACE sentencias RBRACE
    (11) stm -> . asignacion
    (12) stm -> . asignacion_date
    (13) stm -> . array
    (14) stm -> . set
    (15) stm -> . expresion
    (16) stm -> . metodos
    (69) asignacion -> . ID EQUAL expresion
    (70) asignacion -> . declaracion
    (71) asignacion_date -> . type ID EQUAL NEW DATE LPAREN RPAREN
    (72) asignacion_date -> . type ID EQUAL NEW DATE LPAREN date_param RPAREN
    (73) array -> . type ID EQUAL LBRACKET RBRACKET
    (74) array -> . type ID EQUAL LBRACKET arr_parametro RBRACKET
    (75) set -> . type ID EQUAL NEW SET LPAREN RPAREN
    (76) set -> . type ID EQUAL NEW SET LPAREN set_parametro RPAREN
    (88) expresion -> . NUMBER operador NUMBER
    (104) expresion -> . term
    (17) metodos -> . imprimir
    (18) metodos -> . touppercase
    (19) metodos -> . tolowercase
    (20) metodos -> . startwith
    (21) metodos -> . tostring
    (22) metodos -> . pop
    (23) metodos -> . push
    (24) metodos -> . shift
    (25) metodos -> . setdate
    (26) metodos -> . getfullyear
    (27) metodos -> . has
    (28) metodos -> . intersection
    (29) metodos -> . union
    (81) declaracion -> . type ID EQUAL expresion
    (86) type -> . VAR
    (87) type -> . LET
    (105) term -> . factor
    (30) imprimir -> . PRINT LPAREN factor RPAREN
    (31) touppercase -> . ID TOUPPERCASE LPAREN RPAREN
    (32) touppercase -> . type ID EQUAL ID TOUPPERCASE LPAREN RPAREN
    (33) tolowercase -> . ID TOLOWERCASE LPAREN RPAREN
    (34) tolowercase -> . type ID EQUAL ID TOLOWERCASE LPAREN RPAREN
    (35) startwith -> . ID STARTSWITH LPAREN STRING RPAREN
    (36) startwith -> . type ID EQUAL ID STARTSWITH LPAREN STRING RPAREN
    (37) tostring -> . ID TOSTRING LPAREN RPAREN
    (38) tostring -> . type ID EQUAL ID TOSTRING LPAREN RPAREN
    (39) pop -> . ID POP LPAREN RPAREN
    (40) pop -> . type ID EQUAL ID POP LPAREN RPAREN
    (41) push -> . ID PUSH LPAREN factor RPAREN
    (42) push -> . type ID EQUAL ID PUSH LPAREN factor RPAREN
    (43) shift -> . ID SHIFT LPAREN RPAREN
    (44) shift -> . type ID EQUAL ID SHIFT LPAREN RPAREN
    (45) setdate -> . ID SETDATE LPAREN NUMBER RPAREN
    (46) setdate -> . type ID EQUAL ID SETDATE LPAREN NUMBER RPAREN
    (47) getfullyear -> . ID GETFULLYEAR LPAREN RPAREN
    (48) getfullyear -> . type ID EQUAL ID GETFULLYEAR LPAREN RPAREN
    (49) has -> . ID HAS LPAREN factor RPAREN
    (50) has -> . type ID EQUAL ID HAS LPAREN factor RPAREN
    (51) intersection -> . ID INTERSECTION LPAREN set_parametro RPAREN
    (52) intersection -> . type ID EQUAL ID INTERSECTION LPAREN set_parametro RPAREN
    (53) union -> . ID UNION LPAREN set_parametro RPAREN
    (54) union -> . type ID EQUAL ID UNION LPAREN set_parametro RPAREN
    (106) factor -> . ID
    (107) factor -> . NUMBER
    (108) factor -> . STRING
    (109) factor -> . TRUE
    (110) factor -> . FALSE

    IF              shift and go to state 7
    FOR             shift and go to state 8
    WHILE           shift and go to state 11
    ID              shift and go to state 10
    NUMBER          shift and go to state 19
    VAR             shift and go to state 34
    LET             shift and go to state 35
    PRINT           shift and go to state 37
    STRING          shift and go to state 38
    TRUE            shift and go to state 39
    FALSE           shift and go to state 40

    sentencias                     shift and go to state 1
    statement                      shift and go to state 2
    if                             shift and go to state 3
    for                            shift and go to state 4
    while                          shift and go to state 5
    stm                            shift and go to state 6
    type                           shift and go to state 9
    asignacion                     shift and go to state 12
    asignacion_date                shift and go to state 13
    array                          shift and go to state 14
    set                            shift and go to state 15
    expresion                      shift and go to state 16
    metodos                        shift and go to state 17
    declaracion                    shift and go to state 18
    term                           shift and go to state 20
    imprimir                       shift and go to state 21
    touppercase                    shift and go to state 22
    tolowercase                    shift and go to state 23
    startwith                      shift and go to state 24
    tostring                       shift and go to state 25
    pop                            shift and go to state 26
    push                           shift and go to state 27
    shift                          shift and go to state 28
    setdate                        shift and go to state 29
    getfullyear                    shift and go to state 30
    has                            shift and go to state 31
    intersection                   shift and go to state 32
    union                          shift and go to state 33
    factor                         shift and go to state 36

state 1

    (0) S' -> sentencias .



state 2

    (1) sentencias -> statement .
    (5) sentencias -> statement . sentencias
    (1) sentencias -> . statement
    (2) sentencias -> . if
    (3) sentencias -> . for
    (4) sentencias -> . while
    (5) sentencias -> . statement sentencias
    (6) sentencias -> . if sentencias
    (7) sentencias -> . while sentencias
    (8) sentencias -> . for sentencias
    (9) statement -> . stm
    (10) statement -> . stm SEMICOLON
    (56) if -> . IF LPAREN condicion RPAREN LBRACE sentencias RBRACE
    (57) if -> . IF LPAREN condicion RPAREN LBRACE sentencias RBRACE else
    (58) if -> . IF LPAREN condicion RPAREN LBRACE sentencias RBRACE elseif
    (68) for -> . FOR LPAREN type ID OF ID RPAREN LBRACE sentencias RBRACE
    (55) while -> . WHILE LPAREN condicion RPAREN LBRACE sentencias RBRACE
    (11) stm -> . asignacion
    (12) stm -> . asignacion_date
    (13) stm -> . array
    (14) stm -> . set
    (15) stm -> . expresion
    (16) stm -> . metodos
    (69) asignacion -> . ID EQUAL expresion
    (70) asignacion -> . declaracion
    (71) asignacion_date -> . type ID EQUAL NEW DATE LPAREN RPAREN
    (72) asignacion_date -> . type ID EQUAL NEW DATE LPAREN date_param RPAREN
    (73) array -> . type ID EQUAL LBRACKET RBRACKET
    (74) array -> . type ID EQUAL LBRACKET arr_parametro RBRACKET
    (75) set -> . type ID EQUAL NEW SET LPAREN RPAREN
    (76) set -> . type ID EQUAL NEW SET LPAREN set_parametro RPAREN
    (88) expresion -> . NUMBER operador NUMBER
    (104) expresion -> . term
    (17) metodos -> . imprimir
    (18) metodos -> . touppercase
    (19) metodos -> . tolowercase
    (20) metodos -> . startwith
    (21) metodos -> . tostring
    (22) metodos -> . pop
    (23) metodos -> . push
    (24) metodos -> . shift
    (25) metodos -> . setdate
    (26) metodos -> . getfullyear
    (27) metodos -> . has
    (28) metodos -> . intersection
    (29) metodos -> . union
    (81) declaracion -> . type ID EQUAL expresion
    (86) type -> . VAR
    (87) type -> . LET
    (105) term -> . factor
    (30) imprimir -> . PRINT LPAREN factor RPAREN
    (31) touppercase -> . ID TOUPPERCASE LPAREN RPAREN
    (32) touppercase -> . type ID EQUAL ID TOUPPERCASE LPAREN RPAREN
    (33) tolowercase -> . ID TOLOWERCASE LPAREN RPAREN
    (34) tolowercase -> . type ID EQUAL ID TOLOWERCASE LPAREN RPAREN
    (35) startwith -> . ID STARTSWITH LPAREN STRING RPAREN
    (36) startwith -> . type ID EQUAL ID STARTSWITH LPAREN STRING RPAREN
    (37) tostring -> . ID TOSTRING LPAREN RPAREN
    (38) tostring -> . type ID EQUAL ID TOSTRING LPAREN RPAREN
    (39) pop -> . ID POP LPAREN RPAREN
    (40) pop -> . type ID EQUAL ID POP LPAREN RPAREN
    (41) push -> . ID PUSH LPAREN factor RPAREN
    (42) push -> . type ID EQUAL ID PUSH LPAREN factor RPAREN
    (43) shift -> . ID SHIFT LPAREN RPAREN
    (44) shift -> . type ID EQUAL ID SHIFT LPAREN RPAREN
    (45) setdate -> . ID SETDATE LPAREN NUMBER RPAREN
    (46) setdate -> . type ID EQUAL ID SETDATE LPAREN NUMBER RPAREN
    (47) getfullyear -> . ID GETFULLYEAR LPAREN RPAREN
    (48) getfullyear -> . type ID EQUAL ID GETFULLYEAR LPAREN RPAREN
    (49) has -> . ID HAS LPAREN factor RPAREN
    (50) has -> . type ID EQUAL ID HAS LPAREN factor RPAREN
    (51) intersection -> . ID INTERSECTION LPAREN set_parametro RPAREN
    (52) intersection -> . type ID EQUAL ID INTERSECTION LPAREN set_parametro RPAREN
    (53) union -> . ID UNION LPAREN set_parametro RPAREN
    (54) union -> . type ID EQUAL ID UNION LPAREN set_parametro RPAREN
    (106) factor -> . ID
    (107) factor -> . NUMBER
    (108) factor -> . STRING
    (109) factor -> . TRUE
    (110) factor -> . FALSE

    $end            reduce using rule 1 (sentencias -> statement .)
    RBRACE          reduce using rule 1 (sentencias -> statement .)
    IF              shift and go to state 7
    FOR             shift and go to state 8
    WHILE           shift and go to state 11
    ID              shift and go to state 10
    NUMBER          shift and go to state 19
    VAR             shift and go to state 34
    LET             shift and go to state 35
    PRINT           shift and go to state 37
    STRING          shift and go to state 38
    TRUE            shift and go to state 39
    FALSE           shift and go to state 40

    statement                      shift and go to state 2
    sentencias                     shift and go to state 41
    if                             shift and go to state 3
    for                            shift and go to state 4
    while                          shift and go to state 5
    stm                            shift and go to state 6
    type                           shift and go to state 9
    asignacion                     shift and go to state 12
    asignacion_date                shift and go to state 13
    array                          shift and go to state 14
    set                            shift and go to state 15
    expresion                      shift and go to state 16
    metodos                        shift and go to state 17
    declaracion                    shift and go to state 18
    term                           shift and go to state 20
    imprimir                       shift and go to state 21
    touppercase                    shift and go to state 22
    tolowercase                    shift and go to state 23
    startwith                      shift and go to state 24
    tostring                       shift and go to state 25
    pop                            shift and go to state 26
    push                           shift and go to state 27
    shift                          shift and go to state 28
    setdate                        shift and go to state 29
    getfullyear                    shift and go to state 30
    has                            shift and go to state 31
    intersection                   shift and go to state 32
    union                          shift and go to state 33
    factor                         shift and go to state 36

state 3

    (2) sentencias -> if .
    (6) sentencias -> if . sentencias
    (1) sentencias -> . statement
    (2) sentencias -> . if
    (3) sentencias -> . for
    (4) sentencias -> . while
    (5) sentencias -> . statement sentencias
    (6) sentencias -> . if sentencias
    (7) sentencias -> . while sentencias
    (8) sentencias -> . for sentencias
    (9) statement -> . stm
    (10) statement -> . stm SEMICOLON
    (56) if -> . IF LPAREN condicion RPAREN LBRACE sentencias RBRACE
    (57) if -> . IF LPAREN condicion RPAREN LBRACE sentencias RBRACE else
    (58) if -> . IF LPAREN condicion RPAREN LBRACE sentencias RBRACE elseif
    (68) for -> . FOR LPAREN type ID OF ID RPAREN LBRACE sentencias RBRACE
    (55) while -> . WHILE LPAREN condicion RPAREN LBRACE sentencias RBRACE
    (11) stm -> . asignacion
    (12) stm -> . asignacion_date
    (13) stm -> . array
    (14) stm -> . set
    (15) stm -> . expresion
    (16) stm -> . metodos
    (69) asignacion -> . ID EQUAL expresion
    (70) asignacion -> . declaracion
    (71) asignacion_date -> . type ID EQUAL NEW DATE LPAREN RPAREN
    (72) asignacion_date -> . type ID EQUAL NEW DATE LPAREN date_param RPAREN
    (73) array -> . type ID EQUAL LBRACKET RBRACKET
    (74) array -> . type ID EQUAL LBRACKET arr_parametro RBRACKET
    (75) set -> . type ID EQUAL NEW SET LPAREN RPAREN
    (76) set -> . type ID EQUAL NEW SET LPAREN set_parametro RPAREN
    (88) expresion -> . NUMBER operador NUMBER
    (104) expresion -> . term
    (17) metodos -> . imprimir
    (18) metodos -> . touppercase
    (19) metodos -> . tolowercase
    (20) metodos -> . startwith
    (21) metodos -> . tostring
    (22) metodos -> . pop
    (23) metodos -> . push
    (24) metodos -> . shift
    (25) metodos -> . setdate
    (26) metodos -> . getfullyear
    (27) metodos -> . has
    (28) metodos -> . intersection
    (29) metodos -> . union
    (81) declaracion -> . type ID EQUAL expresion
    (86) type -> . VAR
    (87) type -> . LET
    (105) term -> . factor
    (30) imprimir -> . PRINT LPAREN factor RPAREN
    (31) touppercase -> . ID TOUPPERCASE LPAREN RPAREN
    (32) touppercase -> . type ID EQUAL ID TOUPPERCASE LPAREN RPAREN
    (33) tolowercase -> . ID TOLOWERCASE LPAREN RPAREN
    (34) tolowercase -> . type ID EQUAL ID TOLOWERCASE LPAREN RPAREN
    (35) startwith -> . ID STARTSWITH LPAREN STRING RPAREN
    (36) startwith -> . type ID EQUAL ID STARTSWITH LPAREN STRING RPAREN
    (37) tostring -> . ID TOSTRING LPAREN RPAREN
    (38) tostring -> . type ID EQUAL ID TOSTRING LPAREN RPAREN
    (39) pop -> . ID POP LPAREN RPAREN
    (40) pop -> . type ID EQUAL ID POP LPAREN RPAREN
    (41) push -> . ID PUSH LPAREN factor RPAREN
    (42) push -> . type ID EQUAL ID PUSH LPAREN factor RPAREN
    (43) shift -> . ID SHIFT LPAREN RPAREN
    (44) shift -> . type ID EQUAL ID SHIFT LPAREN RPAREN
    (45) setdate -> . ID SETDATE LPAREN NUMBER RPAREN
    (46) setdate -> . type ID EQUAL ID SETDATE LPAREN NUMBER RPAREN
    (47) getfullyear -> . ID GETFULLYEAR LPAREN RPAREN
    (48) getfullyear -> . type ID EQUAL ID GETFULLYEAR LPAREN RPAREN
    (49) has -> . ID HAS LPAREN factor RPAREN
    (50) has -> . type ID EQUAL ID HAS LPAREN factor RPAREN
    (51) intersection -> . ID INTERSECTION LPAREN set_parametro RPAREN
    (52) intersection -> . type ID EQUAL ID INTERSECTION LPAREN set_parametro RPAREN
    (53) union -> . ID UNION LPAREN set_parametro RPAREN
    (54) union -> . type ID EQUAL ID UNION LPAREN set_parametro RPAREN
    (106) factor -> . ID
    (107) factor -> . NUMBER
    (108) factor -> . STRING
    (109) factor -> . TRUE
    (110) factor -> . FALSE

    $end            reduce using rule 2 (sentencias -> if .)
    RBRACE          reduce using rule 2 (sentencias -> if .)
    IF              shift and go to state 7
    FOR             shift and go to state 8
    WHILE           shift and go to state 11
    ID              shift and go to state 10
    NUMBER          shift and go to state 19
    VAR             shift and go to state 34
    LET             shift and go to state 35
    PRINT           shift and go to state 37
    STRING          shift and go to state 38
    TRUE            shift and go to state 39
    FALSE           shift and go to state 40

    if                             shift and go to state 3
    sentencias                     shift and go to state 42
    statement                      shift and go to state 2
    for                            shift and go to state 4
    while                          shift and go to state 5
    stm                            shift and go to state 6
    type                           shift and go to state 9
    asignacion                     shift and go to state 12
    asignacion_date                shift and go to state 13
    array                          shift and go to state 14
    set                            shift and go to state 15
    expresion                      shift and go to state 16
    metodos                        shift and go to state 17
    declaracion                    shift and go to state 18
    term                           shift and go to state 20
    imprimir                       shift and go to state 21
    touppercase                    shift and go to state 22
    tolowercase                    shift and go to state 23
    startwith                      shift and go to state 24
    tostring                       shift and go to state 25
    pop                            shift and go to state 26
    push                           shift and go to state 27
    shift                          shift and go to state 28
    setdate                        shift and go to state 29
    getfullyear                    shift and go to state 30
    has                            shift and go to state 31
    intersection                   shift and go to state 32
    union                          shift and go to state 33
    factor                         shift and go to state 36

state 4

    (3) sentencias -> for .
    (8) sentencias -> for . sentencias
    (1) sentencias -> . statement
    (2) sentencias -> . if
    (3) sentencias -> . for
    (4) sentencias -> . while
    (5) sentencias -> . statement sentencias
    (6) sentencias -> . if sentencias
    (7) sentencias -> . while sentencias
    (8) sentencias -> . for sentencias
    (9) statement -> . stm
    (10) statement -> . stm SEMICOLON
    (56) if -> . IF LPAREN condicion RPAREN LBRACE sentencias RBRACE
    (57) if -> . IF LPAREN condicion RPAREN LBRACE sentencias RBRACE else
    (58) if -> . IF LPAREN condicion RPAREN LBRACE sentencias RBRACE elseif
    (68) for -> . FOR LPAREN type ID OF ID RPAREN LBRACE sentencias RBRACE
    (55) while -> . WHILE LPAREN condicion RPAREN LBRACE sentencias RBRACE
    (11) stm -> . asignacion
    (12) stm -> . asignacion_date
    (13) stm -> . array
    (14) stm -> . set
    (15) stm -> . expresion
    (16) stm -> . metodos
    (69) asignacion -> . ID EQUAL expresion
    (70) asignacion -> . declaracion
    (71) asignacion_date -> . type ID EQUAL NEW DATE LPAREN RPAREN
    (72) asignacion_date -> . type ID EQUAL NEW DATE LPAREN date_param RPAREN
    (73) array -> . type ID EQUAL LBRACKET RBRACKET
    (74) array -> . type ID EQUAL LBRACKET arr_parametro RBRACKET
    (75) set -> . type ID EQUAL NEW SET LPAREN RPAREN
    (76) set -> . type ID EQUAL NEW SET LPAREN set_parametro RPAREN
    (88) expresion -> . NUMBER operador NUMBER
    (104) expresion -> . term
    (17) metodos -> . imprimir
    (18) metodos -> . touppercase
    (19) metodos -> . tolowercase
    (20) metodos -> . startwith
    (21) metodos -> . tostring
    (22) metodos -> . pop
    (23) metodos -> . push
    (24) metodos -> . shift
    (25) metodos -> . setdate
    (26) metodos -> . getfullyear
    (27) metodos -> . has
    (28) metodos -> . intersection
    (29) metodos -> . union
    (81) declaracion -> . type ID EQUAL expresion
    (86) type -> . VAR
    (87) type -> . LET
    (105) term -> . factor
    (30) imprimir -> . PRINT LPAREN factor RPAREN
    (31) touppercase -> . ID TOUPPERCASE LPAREN RPAREN
    (32) touppercase -> . type ID EQUAL ID TOUPPERCASE LPAREN RPAREN
    (33) tolowercase -> . ID TOLOWERCASE LPAREN RPAREN
    (34) tolowercase -> . type ID EQUAL ID TOLOWERCASE LPAREN RPAREN
    (35) startwith -> . ID STARTSWITH LPAREN STRING RPAREN
    (36) startwith -> . type ID EQUAL ID STARTSWITH LPAREN STRING RPAREN
    (37) tostring -> . ID TOSTRING LPAREN RPAREN
    (38) tostring -> . type ID EQUAL ID TOSTRING LPAREN RPAREN
    (39) pop -> . ID POP LPAREN RPAREN
    (40) pop -> . type ID EQUAL ID POP LPAREN RPAREN
    (41) push -> . ID PUSH LPAREN factor RPAREN
    (42) push -> . type ID EQUAL ID PUSH LPAREN factor RPAREN
    (43) shift -> . ID SHIFT LPAREN RPAREN
    (44) shift -> . type ID EQUAL ID SHIFT LPAREN RPAREN
    (45) setdate -> . ID SETDATE LPAREN NUMBER RPAREN
    (46) setdate -> . type ID EQUAL ID SETDATE LPAREN NUMBER RPAREN
    (47) getfullyear -> . ID GETFULLYEAR LPAREN RPAREN
    (48) getfullyear -> . type ID EQUAL ID GETFULLYEAR LPAREN RPAREN
    (49) has -> . ID HAS LPAREN factor RPAREN
    (50) has -> . type ID EQUAL ID HAS LPAREN factor RPAREN
    (51) intersection -> . ID INTERSECTION LPAREN set_parametro RPAREN
    (52) intersection -> . type ID EQUAL ID INTERSECTION LPAREN set_parametro RPAREN
    (53) union -> . ID UNION LPAREN set_parametro RPAREN
    (54) union -> . type ID EQUAL ID UNION LPAREN set_parametro RPAREN
    (106) factor -> . ID
    (107) factor -> . NUMBER
    (108) factor -> . STRING
    (109) factor -> . TRUE
    (110) factor -> . FALSE

    $end            reduce using rule 3 (sentencias -> for .)
    RBRACE          reduce using rule 3 (sentencias -> for .)
    IF              shift and go to state 7
    FOR             shift and go to state 8
    WHILE           shift and go to state 11
    ID              shift and go to state 10
    NUMBER          shift and go to state 19
    VAR             shift and go to state 34
    LET             shift and go to state 35
    PRINT           shift and go to state 37
    STRING          shift and go to state 38
    TRUE            shift and go to state 39
    FALSE           shift and go to state 40

    for                            shift and go to state 4
    sentencias                     shift and go to state 43
    statement                      shift and go to state 2
    if                             shift and go to state 3
    while                          shift and go to state 5
    stm                            shift and go to state 6
    type                           shift and go to state 9
    asignacion                     shift and go to state 12
    asignacion_date                shift and go to state 13
    array                          shift and go to state 14
    set                            shift and go to state 15
    expresion                      shift and go to state 16
    metodos                        shift and go to state 17
    declaracion                    shift and go to state 18
    term                           shift and go to state 20
    imprimir                       shift and go to state 21
    touppercase                    shift and go to state 22
    tolowercase                    shift and go to state 23
    startwith                      shift and go to state 24
    tostring                       shift and go to state 25
    pop                            shift and go to state 26
    push                           shift and go to state 27
    shift                          shift and go to state 28
    setdate                        shift and go to state 29
    getfullyear                    shift and go to state 30
    has                            shift and go to state 31
    intersection                   shift and go to state 32
    union                          shift and go to state 33
    factor                         shift and go to state 36

state 5
